<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Risk</string>
    <string name="action_settings">Settings</string>
    <string name="risk_title">Risk - Conquer the World!</string>
    <string name="create_game_activity_title">CREATE LOCAL GAME</string>
    <string name="number_players_option">Number of Players:</string>
    <string name="option_map_type">Map Type:</string>
    <string-array name="option_map_types">
        <item>Classic Map</item>
        <item>Epic Map</item>
    </string-array>
    <string name="option_cards_setting">Card Settings:</string>
    <string-array name="option_cards_settings">
        <item>Regular Cards</item>
        <item>No Cards</item>
        <item>Modified Cards</item>
    </string-array>
    <string name="play_game_button">Start Game</string>
    <string name="create_game_button">Start Local Game</string>
    <string name="load_game_button">Load Game</string>
    
    <string name="action_button_default">Action Button</string>
    <string name="action_end_attacks">End Attacks</string>
    <string name="action_end_fortifications">End Fortifications</string>
    <string name="action_advance_troops">Advance Troops</string>
    <string name="next_cash_in">Next Cash-In: %1$d troops</string>
    
    <string name="error_alert_title">Oops!</string>
    <string name="error_attack_1_troop">You cannot attack with 1 troop!</string>
    <string name="error_does_not_connect">%1$s does not connect with %2$s!</string>
    
    <string name="play_set_dialog_title">Play a Set</string>
    <string name="play_set_message">You have a set to play for %1$d troops.</string>
    <string name="play_set_negative">No Set</string>
    
    <string name="ai_player_message_title">%1$s says…</string>
    <string-array name="ai_simulate_options">
        <item>Continue</item>
        <item>Pause</item>
        <item>Simulate 1 Round</item>
        <item>Simulate 5 Rounds</item>
        <item>Simulate 10 Rounds</item>
        <item>Simulate Game</item>
    </string-array>
    
    <string name="pp_troops">%1$d troops</string>
    <string name="pp_territories">%1$d territories</string>
    <string name="pp_cards">%1$d cards</string>
    <string name="pp_bonus">%1$d bonus</string>
    
    <string name="log_beginning_round">Beginning Round %1$d.</string>
    <string name="log_continent_bonus">%1$s gets %2$d troops for holding %3$s.</string>
    <string name="log_deployed_troops">%1$s placed %2$d troops on %3$s.</string>
    <string name="log_game_initialized">Game Initialized.</string>
    <string name="log_gets_card">%1$s gets a card.</string>
    <string name="log_territory_bonus">%1$s gets %2$d troops for %3$d territories.</string>
    <string name="log_fortified">%1$s fortified %2$s with %3$d troops from %4$s.</string>
    <string name="log_player_eliminated">%1$s eliminated %2$s from the game.</string>
    <string name="log_territory_conquered">%1$s conquered %2$s from %3$s.</string>
    
    <string name="message_attack">Attack - click from your territory to an adjacent one to attack.</string>
    <string name="message_attack_from">Attack from %1$s to an adjacent territory.</string>
    <string name="message_deploy_armies">%1$s, you have %2$d troops left to deploy.</string>
    <string name="message_dice">%1$s vs. %2$s</string>
    <string name="message_fortify">Fortify - click from one territory to another to fortify troops.</string>
    <string name="message_fortify_from">Click to fortify from %1$s.</string>
    
    <string name="default_troop_count">0 troops</string>
    <string name="default_territory_count">0 territories</string>
    <string name="default_bonus_count">0 bonus</string>
    <string name="default_card_count">0 cards</string>
    
    <string name="login_button">Login</string>
    <string name="create_account_button">Create an Account</string>
    <string name="username_input">Username:</string>
    <string name="password_input">Password:</string>
    <string name="new_username_input">Create Username:</string>
    <string name="new_password_input">Password:</string>
    <string name="new_confirm_password_input">Confirm Password:</string>
    <string name="create_account_title">New Player? Create an Account now!</string>
    
    <string name="load_game_title">Previous Games</string>

    <string name="challenge_title">Challenge a friend to a game of Risk!</string>
    <string name="challenge_user_hint">Enter user name:</string>
    <string name="challenge_user_button">Send Challenge</string>
	<string name="button_challenge_menu">Challenge Menu</string>
    <string name="add_ai_button">Add AI Player</string>
    <string name="add_local_button">Add Local Player</string>
	<string name="challenge_header_user">User name</string>
	<string name="challenge_header_status">Challenge status</string>
	<string name="menu_button">Back to Main Menu</string>
	<string name="get_challenges_button">Refresh Challenges</string>
	<string name="accepted_challenge_button">Accepted - Play now!</string>
	<string name="received_challenge_button">Accept their challenge!</string>
	<string name="challenge_table_title">Your Challenges</string>
	<string name="invalid_user">Invalid username!</string>
	
</resources>
