<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/launch_bg" >
    
    <Button
        android:id="@+id/button_create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_game_button"
        android:onClick="sendMessage" />
    
    <Button
        android:id="@+id/button_load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game_button" 
        android:onClick="sendMessage" />
    
		<Button
        android:id="@+id/button_challenge_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_challenge_menu"
    		android:onClick="sendMessage" />
    
</LinearLayout>