<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/challenge_title" />
    
    <EditText
    	android:id="@+id/challenge_user_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/challenge_user_hint"
    	android:inputType="text" />
    
    <Button
        android:id="@+id/button_challenge_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_user_button"
    	android:onClick="sendMessage" />
    
</LinearLayout>
